README format changes

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Environmental Intelligence
+Berico's Environmental Intelligence Repository
+==============================================
 
 This is a project to exploit environmental data and apply it to intelligence gathering and operational efforts.
 
